2005-10-13  Frederic Crozat  <fcrozat@mandriva.com>

	* logrtns.c: (isLogFile): Only accept regular file as
	logfile, prevent freeze when /dev/tty* is in syslog.conf.
	Bug #318689.

2005-10-13  Frederic Crozat  <fcrozat@mandriva.com>

	* logrtns.c: (isLogFile): Don't try to close file which
	failed to open.

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (tree_view_columns_set_visible),
	(model_fill_date_iter), (model_fill_iter),
	(logview_add_new_log_lines), (logview_show_model),
	(log_scroll_and_focus_path), (logview_create_model_no_date),
	(logview_create_model), (log_repaint):
	* logview.c: (logview_add_logs_from_names), (main),
	(CreateMainWin):
	* logview.h: Massive refactoring of the drawing function. Massive
	speedup when showing big logs (>20K lines).

2005-10-12  Vincent Noel <vnoel@cox.net>

	* logview.c: (main), (CreateMainWin):
	Make the interface at least a bit responsive during initial
	loading of logs.

2005-10-12  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* logview.c: (main), (LoadLogMenu):
	* logview.h: While I'm cleaning up, remove the actions.[ch] and
	desc_db.[ch] files which have not been used in more than a year
	(and I haven't heard any complains, so...)

2005-10-12  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* log_repaint.c:
	* logview.c: (CreateMainWin):
	* logview.h: Remove some useless items from the LogviewWindow
	structure. Remove the zoom.[ch] files from the build (they have
	not been used in a while).

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (row_toggled_cb), (log_repaint):
	* log_repaint.h:
	* logview.c: (loglist_selection_changed), (CreateMainWin):
	Fixes and speedups.

2005-10-12  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_save_prefs), (logview_add_log),
	(logview_add_log_from_name), (logview_add_logs_from_names),
	(logview_remove_log), (logview_create_window),
	(loglist_unbold_log), (loglist_remove_selected_log),